tests/paczka1/fuzzy1/60386467.err
Error in line 2: XkHdoAooUW S201 39,3
Error in line 5: k00qGMp A898 53,0
Error in line 10: rStWZ A898 27,3
Error in line 11: rStWZ S4 38,8
Error in line 8: sgYA S4 86,7
Error in line 19: sgYA A712 98,7
Error in line 21: zYeb8VsClb S4 82,8
Error in line 28: zYeb8VsClb A898 44,0
